update log/logout feature

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,9 +4,11 @@
 </head>
 <body>
   <nav>
+    <a href="/foodies"></a>
+    <a href="/profiles"></a>
     <% if (user) { %>
       <a href="/auth/logout">
-        <button type="submit">Logout</button>
+        <button type="submit">Logout 👋</button>
       </a>
     <% } else { %>
       <a href="/auth/google" class="siwg-link">
