add mongoDb and two test users

--- a/views/foodies/index.ejs
+++ b/views/foodies/index.ejs
@@ -21,7 +21,7 @@
     </form>
 	<ul>
   <% foodies.forEach(food => { %>
-    <%= food.meal %> 
+    <img src="<%= food.meal %>" alt=""> 
     <li> <%= food.name %>  <%= food.description %></li>
   <% }) %>
   </ul>
