--- a/views/foodies/show.ejs
+++ b/views/foodies/show.ejs
@@ -6,7 +6,7 @@
   <img src="<%= foodie.meal %>" alt="">
   <h5><%= foodie.description %></h5>
   <ul>
-    <li>Ingridents: <%= foodie.ingridents %> </li>
+    <!-- <li>Ingridents: <%#= foodie.ingridents %> </li> -->
     <li>
       Directions: <%= foodie.directions%>
     </li>
