create edit route

--- a/views/foodies/new.ejs
+++ b/views/foodies/new.ejs
@@ -13,7 +13,7 @@
       </label>
       <label>
         Directions:
-        <input type="text" name="directions" autocomplete="off">
+        <input type="text" name="direction" autocomplete="off">
       </label>
       <button type="submit">POST</button>
     </form>
