--- a/views/foodies/show.ejs
+++ b/views/foodies/show.ejs
@@ -6,11 +6,15 @@
   <img src="<%= foodie.meal %>" alt="">
   <h5><%= foodie.description %></h5>
   <ul>
-    <!-- <li>Ingridents: <%#= foodie.ingridents %> </li> -->
     <li>
-      Directions: <%= foodie.directions%>
+      Directions: <%= foodie.direction%>
     </li>
   </ul>
+  <% if (foodie.owner.equals(user?.profile._id)) { %>
+    <form action="/foodies/<%= foodie._id %>/edit" method="GET">
+      <button class="btn" type="submit">Edit your meal 🚧</button>
+    </form>
+  <% } %>
 </section>
 
 <%- include('../partials/footer') %>
