--- a/views/foodies/edit.ejs
+++ b/views/foodies/edit.ejs
@@ -2,18 +2,18 @@
 <%- include('../partials/nav') %>
 
 <h1>Edit your meal!</h1>
-    <form action="/foodies" method="POST">
+    <form action="/foodies/<%= foodie._id %>"_method=PUT method="POST">
       <label>
         Add a link of the picture of your tasty meal here:
-        <input type="text" name="meal" autocomplete="off">
+        <input type="text" name="meal" value="<%= foodie.meal %>" autocomplete="off">
       </label>
       <label>
         Description:
-        <input type="text" name="description" autocomplete="off">
+        <input type="text" name="description" value="<%= foodie.description %>" autocomplete="off">
       </label>
       <label>
         Directions:
-        <input type="text" name="direction" autocomplete="off">
+        <input type="text" name="direction" value="<%= foodie.direction %>" autocomplete="off">
       </label>
       <button type="submit">UPDATE</button>
     </form>
