--- a/views/foodies/show.ejs
+++ b/views/foodies/show.ejs
@@ -16,5 +16,7 @@
     </form>
   <% } %>
 </section>
-
+<form action="/foodies/<%= foodie._id %>?_method=DELETE" method="POST">
+  <button class="btn" type="submit">Delete this Meal</button>
+</form>
 <%- include('../partials/footer') %>
