--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,31 @@
 <%- include('./partials/html-head') %>
 
 
-<main>
-  <a href="/foodies"><h1>Foodie Buds</h1></a>
-  <% if (!user) { %>
-    <link rel="stylesheet" href="/stylesheets/siwg.css">
-  <% } %>
-</head>
-<body>
-  <nav>
-    
-    <% if (user) { %>
-      <a href="/auth/logout">Logout 👋</a>
-    <% } else { %>
-      <a href="/auth/google" class="siwg-link">
-        <button type="submit" class="siwg">
-          <img id="siwg-image" alt="Sign in with Google" />
-        </button>
-      </a>
-    <% } %>
-  </nav>
+
+    <% if (!user) { %>
+      <link rel="stylesheet" href="/stylesheets/siwg.css">
+      <% } %>
+        </head>
+
+        <body>
+          <!-- <nav> -->
+          <section class="log-in">
+            <h1>Foodie Buds</h1>
+
+            <% if (user) { %>
+              <a href="/auth/logout">Logout 👋</a>
+              <% } else { %>
+                <a href="/auth/google" class="siwg-link">
+                  <button type="submit" class="siwg">
+                    <img id="siwg-image" alt="Sign in with Google" width="150" />
+                  </button>
+                </a>
+                <% } %>
+                
+          </section>
+          <!-- </nav> -->
+
+
   
 
-</main>
-
-<%- include('./partials/footer') %>
+  <%- include('./partials/footer') %>
