--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,13 +40,36 @@ nav {
   align-items: flex-end;
 }
 
-main {
+.all-meals-section {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
+.meals-list {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgb(118, 96, 131);
+  padding: 40px;
+  border-radius: 15px;
+  list-style: none;
+}
+
+.meal-section {
+  padding: 20px;
+  border: 2px solid rgb(118, 96, 131);
+}
+
+.food-details {
+  /* padding-top: 20px; */
+  padding-bottom: 30px;
+}
+
 h1 {
   font-size: 3.6rem;
+}
+
+.food-img {
+  border-radius: 15px;
+  border: 1px solid rgb(92, 92, 92);
 }
