--- a/views/foodies/index.ejs
+++ b/views/foodies/index.ejs
@@ -1,15 +1,19 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<section>
+<section class="all-meals-section">
   <h1>Food!😋</h1>
-	<ul>
-  <% foodies.forEach(food => { %>
-    <a href="/foodies/<%= food._id %>"><img src="<%= food.meal %>" alt="" width="500" height="500"></a> 
-    <li><img src="<%= food.owner.avatar %>" alt="" width="20" height="20">  
-       <%= food.description %></li>
-  <% }) %>
-  </ul>
+  
+  
+    <ul class="meals-list">
+      <% foodies.forEach(food => { %>
+        <div class="meal-section">
+          <a href="/foodies/<%= food._id %>"><img src="<%= food.meal %>" class="food-img" alt="" width="404" height="404" ></a> 
+        <li class="food-details"><img src="<%= food.owner.avatar %>" alt="" width="20" height="20">  
+          <%= food.description %></li>
+        </div>
+          <% }) %>
+        </ul>
 </section>
 
 <%- include('../partials/footer') %>
