--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,25 +7,28 @@
     <body>
       <nav>
         <div>
-
-          <a href="/foodies"><i class="fa-solid fa-house"></i></a>
-          <a href="/foodies/new"><i class="fa-solid fa-circle-plus">Add your Meal</i></a>
-          <a href="/profiles"><i class="fa-solid fa-user-group">Foodies</i></a>
+          <!-- Home page -->
+          <a href="/foodies/"><i class="bi bi-house-door"></i></a>
+          
+          <!-- Add a meal Page  -->
+          <a href="/foodies/new"><i class="fa-solid fa-circle-plus"></i></a>
+          <!-- All profiles page -->
+          <a href="/profiles"><i class="fa-solid fa-user-group"></i></a>
         </div>
+
+        <h1 class="nav-h1">Foodie Buds</h1>
         <div class="right-nav">
 
           <h4>Hey, <%= user ? user.profile.name : "Foodie Bud!" %>
           </h4>
           <% if (user?.profile.avatar) { %>
             <div>
-              <img src="<%= user.profile.avatar %>" alt="<%= user.profile.name %> avatar" width="40" height="40" />
+              <a href="/profiles/<%= user?.profile._id %>">
+                <img src="<%= user.profile.avatar %>" alt="<%= user.profile.name %> avatar" width="40" height="40" class="main-avatar"/>
+              </a>
             </div>
             <% } %>
-              <% if (user) { %>
-                <a href="/auth/logout">
-                  <button type="submit">Logout 👋</button>
-                </a>
-                <% } else { %>
+              <% if (!user) { %>
                   <a href="/auth/google" class="siwg-link">
                     <button type="submit" class="siwg">
                       <img id="siwg-image" alt="Sign in with Google" />
