--- a/public/stylesheets/siwg.css
+++ b/public/stylesheets/siwg.css
@@ -11,7 +11,7 @@
   width: 40%;
   margin: 0 auto;
   padding-bottom: 50px;
-  border: 1px solid gray;
+  border: 1px solid rgb(183, 166, 221);
 }
 
 .log-in h1 {
