--- a/views/foodies/edit.ejs
+++ b/views/foodies/edit.ejs
@@ -1,21 +1,27 @@
 <%- include('../partials/html-head') %>
-<%- include('../partials/nav') %>
+  <link rel="stylesheet" href="/stylesheets/foodies/edit.css">
+  <%- include('../partials/nav') %>
 
-<h1>Edit your meal!</h1>
-    <form action="/foodies/<%= foodie._id %>?_method=PUT" method="POST">
-      <label>
-        Add a link of the picture of your tasty meal here:
-        <input type="text" name="meal" value="<%= foodie.meal %>" autocomplete="off">
-      </label>
-      <label>
-        Description:
-        <input type="text" name="description" value="<%= foodie.description %>" autocomplete="off">
-      </label>
-      <label>
-        Directions:
-        <input type="text" name="direction" value="<%= foodie.direction %>" autocomplete="off">
-      </label>
-      <button type="submit">UPDATE</button>
-    </form>
+
+    <div class="edit-page">
+      <div class="edit-section">
+        <h1 class="edit-head">Edit your meal!</h1>
+        <form action="/foodies/<%= foodie._id %>?_method=PUT" method="POST">
+          <label>
+            <h4>Meal Url:</h4>
+            <input type="text" name="meal" value="<%= foodie.meal %>" autocomplete="off">
+          </label>
+          <label>
+            <h4>Description:</h4>
+            <input type="text" name="description" value="<%= foodie.description %>" autocomplete="off">
+          </label>
+          <label>
+            <h4>Directions:</h4>
+            <input type="text" name="direction" value="<%= foodie.direction %>" autocomplete="off">
+          </label>
+          <button type="submit">UPDATE</button>
+        </form>
+      </div>
+    </div>
 
     <%- include('../partials/footer') %>
