--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -14,6 +14,7 @@
   color: rgb(118, 96, 131);
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgb(118, 96, 131);
+  text-align: center;
   border-radius: 15px;
 }
 
